--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Neonatal App</string>
+    <string name="app_name">E - Mkulima</string>
 
     <string name="splash_button1">Join Now</string>
     <string name="splash_button2">Already have an Account? Login</string>
